overlays/prod/rollout-patch.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nginx
  namespace: myapp-prod
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: nginx-chart
          image: amaljithh/green-page:v1
  strategy:
    canary:
      steps:
        - setWeight: 10
        - pause: {duration: 30}
        - analysis:
            templates:
              - templateName: blue-green-check
        - setWeight: 25
        - pause: {duration: 30}
        - analysis:
            templates:
              - templateName: blue-green-check
        - setWeight: 50
        - pause: {duration: 60}
        - analysis:
            templates:
              - templateName: blue-green-check
        - setWeight: 75
        - pause: {duration: 30}
        - setWeight: 100
