overlays/prod/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-httproute
  namespace: myapp-prod
spec:
  hostnames:
    - myapp.example.com
